28 mins into workshop, started header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button id="header__button_greeting">Greet Me</button>
         <button id="header__button_delete">Delete Me</button>
         <div class="header__text_container">
+            <!-- bem block element modifier -->
         </div>
     </header>
     <div class="main">
